# goit-pythonweb-hw-10

./: .env_example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 2afad50c9d33_init.py  55e81cae2cd8_init.py  c395779c1bad_init.py  d3a21d830ee6_init.py  fdbd0f6c868d_add_to_model_user_filed_confirmed.py  fdbd0f6c868d_add_to_model_user_filed_confirmed.py~
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
src/services/templates/: verify_email.html
